# icml26-repro-ub9PwBtHqD-shapleig

./: .gitignore  APPROACH_LEDGER.md  README.md  STATUS.md  requirements.txt
.openresearch/protected/: judged_space_85ca787_manifest.sha256  published_space_5b88f06_manifest.sha256  published_space_969796f_manifest.sha256
.openresearch/release/: hf_incremental_upload_allowlist.txt  hf_incremental_upload_manifest.sha256  hf_logbook_refresh_manifest.sha256  hf_upload_allowlist.txt  hf_upload_manifest.sha256  space_subset_check.json
.openresearch/source/: source_audit.md
.trackio/: metadata.json
.trackio/logbook/: README.md  index.html  logbook.json
.trackio/logbook/evidence/current/environment/: pyproject.toml
docs/: paper.txt
notebooks/: shapleig_claims.py
outputs/: c1_closed_form_eig.csv  c2_greedy_vs_random.csv  summary.json
outputs/real_application/: aggregate_mse.csv  statistical_analysis.json  summary.json  upstream_parity.json  vit9_realized_mse.csv
reports/c2-c5-partial/: report.md
reports/shapleig-claims/: figure_manifest.json  report.md
repro/src/: build_report_assets.py  claim3_dv_contract.py  claim4_contract.py  claim5_audit.py  claim5_timing_contract.py  complexity.py  fetch_vit9_games.py  real_application.py  reproduce.py  run_claim3_dv_audit.py  run_claim5_partial_timing.py  run_claims.py  run_complexity_claim.py  run_scope_audit.py  scope_contract.py  validate_release_candidate.py  verify_claim1_complexity.py  verify_claim23_scope.py  verify_claim2_partial_scope.py  verify_claim3_dv.py  verify_claim5_large_timing.py  (+2 more)
(+126 files in other folders)
