[project]
name = "shapleig-reproduction"
version = "0.1.0"
description = "Claim-by-claim reproduction of ShaplEIG (arXiv 2606.02247)"
requires-python = "==3.12.11"
dependencies = [
    "matplotlib==3.11.1",
    "numpy==2.4.6",
    "pytest==9.1.1",
    "scipy==1.18.0",
    "shap==0.49.1",
    "shapiq==1.4.1",
    "xgboost==3.0.5",
]

[tool.uv]
package = false
